Fixed recipe alignment issue in SCSS

--- a/18 Forkify App/src/sass/_recipe.scss
+++ b/18 Forkify App/src/sass/_recipe.scss
@@ -159,6 +159,8 @@
   ///////////
   // DIRECTIONS
   &__directions {
+    grid-column: 1 / -1;
+    width: 100%;
     padding: 5rem 10rem;
     padding-bottom: 5rem;
     display: flex;
